--- a/08-HTML/homework/style.css
+++ b/08-HTML/homework/style.css
@@ -23,9 +23,10 @@
     height: 600px;
     width: 500px;
     background-color: aquamarine;
-    padding: 50px;
-    border: 30px;
+    border: solid #000;
+    border: 15px;
     border-color: darkorchid;
+    padding: 50px;
     margin: 0 auto;
     }
 
