--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -7,32 +7,84 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
-
+    display: block;
+    text-align: center;
 }
 
 
 /* Ejercicio 2: Posicionar el header */
 
 /* Acá va tu código */
-
+#ejercicioDos {
+    display: none;
+}
 
 
 /* Ejercicio 3: */
 
 /* Acá va tu código */
 
-
+#ejercicioTres {
+    position: relative;
+    top: 100px;
+    left: 200px;  
+}
 
 /* Ejercicio 4: */
 
 /* Acá va tu código */
 
-
+#ejercicioCuatro {
+    position: fixed;
+    top: 0;
+    left: 0;
+}
 
 /* Ejercicio 5: */
 
 /* Acá va tu código */
 
-
+#ejercicioCinco {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
 
 /* Ejercicio 6. */
+
+flex-direction: row-reverse;
+}
+
+#elementoUno {
+      display: flex;
+      justify-content: flex-end;
+      align-items: flex-end;
+      flex-direction: column;
+      
+}
+
+#elementoDos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column-reverse;
+    
+}
+
+#elementoTres {
+    display: flex;
+    justify-content: flex-start;
+    align-items: baseline;
+    flex-direction: row;
+
+}
+
+#elementoCuatro {
+    display: flex;
+    justify-content: space-around;
+    align-items: stretch;
+    flex-direction: row-reverse;
+}
+
+
+
